# mcpify

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  .vercelignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  LICENSE  PITCH.md  PRODUCT.md  README.md  SECURITY.md  mcp.config.json  package-lock.json  package.json  render.yaml  run.sh  tsconfig.base.json
.changeset/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
apps/extension/: README.md  background.js  manifest.json  options.html  options.js  package.json  popup.html  popup.js  sidepanel.html  sidepanel.js  tsconfig.json  ui.css
apps/web/: middleware.ts  next.config.mjs  package.json  tsconfig.json  vercel.json
docs/: 00-overview.md  01-contracts.md  02-data-model.md  03-data-flow.md  04-legal-modes.md  OPENCLI_BACKEND.md  README.md
docs/apps/: extension.md  web-ui.md  web.md
docs/services/: generator.md  monitor.md  scraper.md
fixtures/capture-bundles/: sample-public.json
fixtures/real-world-html/: adversarial-base-host.html  adversarial-base-href.html  adversarial-malformed.html  adversarial-script-comment.html  github-explore.html  hackernews.html  hn-algolia-react-rendered.html  mdn-fetch.html  nextjs-app-router-ssr.html  npm-express.html  (+13 more)
infra/: README.md  compose.prod.yml  docker-compose.yml
scripts/: expose.sh  opencli-bridge.mjs  seed-catalog.mjs  seed-mongodb-catalog.mjs  sync-extension-config.mjs  sync-mongodb-to-solana.mjs
services/scraper/: README.md  pyproject.toml
services/scraper/scraper/: __init__.py  capture.py  contracts.py  legal.py  robots.py  service.py  ssrf.py  tiers.py
services/scraper/tests/: conftest.py  local_server.py  test_capture.py  test_contracts.py  test_interaction.py  test_legal.py  test_robots.py  test_service.py  test_ssrf.py  test_tiers_real.py
services/scraper/tests/fixtures/: scroll-search.html  spa.html
(+206 files in other folders)
